samples/_failures_safe/1761404444_ab1b24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d443a4a4.c: In function ‘main’:
./samples/SAFE/__tmp_d443a4a4.c:119:5: error: expected expression at end of input
  119 |     if (
      |     ^~
./samples/SAFE/__tmp_d443a4a4.c:119:5: error: expected declaration or statement at end of input
